--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint":
       "eslint src test demo/src demo/standalone/app.js server.js webpack.*.js",
     "test": "nyc mocha \"test/**/*.test.js\"",
+    "test-focus" : "nyc mocha \"test/is-input-focused/*.test.js\"",
     "copy-static-files":
       "cp demo/src/index.html demo/src/components/App/components/Examples/components/Basic/autosuggest.css demo/dist/",
     "dist": "rm -rf dist && mkdir dist && babel src -d dist",
