--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-autosuggest",
+  "name": "react-autosuggest-tab",
   "version": "9.3.4",
   "description": "WAI-ARIA compliant React autosuggest component",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/moroshko/react-autosuggest.git"
+    "url": "https://github.com/mugiseyebrows/react-autosuggest.git"
   },
   "author": "Misha Moroshko <michael.moroshko@gmail.com>",
   "scripts": {
